[package]
name = "dioxus-example-zip-file"
version = "0.1.0"
authors = ["Chris Rogus <rogusdev@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_zip = "0.0.17"
dioxus = { version = "0.6.3", features = [] }
futures-util = "0.3.31"
reqwest = { version = "0.12.15", features = ["stream"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wasm-streams = "0.4.2"
web-sys = { version = "0.3.77", features = [
    "Window",
    "FileSystemHandle",
    "FileSystemFileHandle",
    "SaveFilePickerOptions",
    "DomException",
    "FileSystemWritableFileStream",
] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
